# c-scuola

./: .gitignore  README.md  config.yml  messages.yml  parties.yml
1.nuovooo/C-Scuola/: CMakeLists.txt
1.nuovooo/C-Scuola/10-11/: es1.c  es2.c  es3.c  es4.c  es6.c  es7.c  voto.c
1.nuovooo/C-Scuola/15-12/: es1.c  es2.c  es3.c
1.nuovooo/C-Scuola/19-01-23/: es1.c  es2.c  es4.c  es5.c
1.nuovooo/C-Scuola/27-10/: es1.c  es2.c  es3.c  es4.c
1.nuovooo/C-Scuola/3-11/: es1.c
1.nuovooo/C-Scuola/VER-1-12/: es1.c  es2.c
area-triangolo-rettangolo/: area.c
calcola-iscrizione-alunno/: iscrizione.c
calcola-ormeggio/: calcola-ormeggio.c
calcola-stipendio/: calcolo-stipendio.c
calcolatrice/: calcolatrice  calcolatrice.c  readme
calcolatrice-divisioni/: calcolatrice-divisioni.c  readme
esercizi-while/: primo-es.c  trova-num-divisibili.c
giorni-di-mese/: calcola-giorni-mese  calcola-giorni-mese.c
grado-voto/: grado-voto.c
identifica-numero/: identifica-numero.c
identifica-poligoni/: identifica-poligoni.c
identifica-stagione/: identifica-stagione.c
inverti-variabili/: invertitore-variabili.c
numeri-pari_dispari/: a.out  pari-dispari.c
numero-positivo-negativo/: numero-positivo-negativo.c
postcondizionale/: es1  es1.c  es2  es2.c  es3  es3.c
precondizionale/: es1  es1.c  es2  es2.c  es3  es3.c  es4  es4.c  es5  es5.c  es6  es6.c
rand/: es1.c
verifica 1/: readme.md  verifica.c
verifica 1/es1/: esercizio1.c
verifica 1/es2/: esercizio2.c
verifica2/: domande.txt  es1.c  es2.c  es3.c
vettori/: es1  es1.c
vettori1/: erik  erik.c  es1  es1.c
(+4 files in other folders)
