cmake_minimum_required(VERSION 3.23)
project(C_Scuola C)

set(CMAKE_C_STANDARD 99)

add_executable(C_Scuola cmake-build-debug 27-10/es1.c 27-10/es2.c 27-10/es3.c 27-10/es4.c 3-11/es1.c 10-11/es1.c 10-11/es2.c 10-11/es3.c 10-11/es4.c 10-11/voto.c 10-11/es6.c 10-11/es7.c VER-1-12/es1.c VER-1-12/es2.c 15-12/es1.c 15-12/es2.c 15-12/es3.c 19-01-23/es1.c 19-01-23/es2.c 19-01-23/es4.c 19-01-23/es5.c)
